# vM-image-file-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
ova_converter/: cli.py
ova_converter/core/: converter.py  downloader.py  unpacker.py  utils.py
ova_converter/providers/: fydeos.py  generic.py
