[project]
name = "vM-image-file-converter"
version = "0.1.0"
description = "Universal OVA/OVF downloader & converter"
requires-python = ">=3.10"


[project.dependencies]
requests = "^2.28"
tqdm = "^4.64"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"